chore(getCuration): add username and user id to response body
